[gd_scene load_steps=5 format=3 uid="uid://bcvfe5rn86elo"]

[ext_resource type="Script" path="res://scenes/user_interface/control_joystick.gd" id="1_ma6hx"]
[ext_resource type="Texture2D" uid="uid://cd85irhp1bbwl" path="res://assets/gui/joystick/joystick.png" id="2_1npq7"]
[ext_resource type="Texture2D" uid="uid://bvs24llsnkrfi" path="res://assets/gui/joystick/arrow_origin.png" id="3_jkgpq"]
[ext_resource type="Texture2D" uid="uid://bwjsg4fqguui3" path="res://assets/gui/joystick/arrow_end.png" id="4_adib2"]

[node name="ControlJoystick" type="Node2D"]
script = ExtResource("1_ma6hx")

[node name="Joystick" type="Sprite2D" parent="."]
texture = ExtResource("2_1npq7")

[node name="SpriteOrigin" type="Sprite2D" parent="."]
texture = ExtResource("3_jkgpq")

[node name="SpriteEnd" type="Sprite2D" parent="."]
texture = ExtResource("4_adib2")
offset = Vector2(-7, 0)

[node name="ActiveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
